--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url:              https://hcitang.github.io
 owner:
   name:           Tony Tang
   avatar:         tony.jpg
-  bio:            I'm an Associate Professor in the iSchool at the University of Toronto. I'm passionate about Human-Computer Interaction and other weird things.
-  email:          tonytang@utoronto.ca
+  bio:            I'm an Associate Professor in the School of Computer and Information Systems at the Singapore Management University. I'm passionate about Human-Computer Interaction and other weird things.
+  email:          tonyt@smu.edu.sg
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: proclubboy
   google_scholar: RG1EQowAAAAJ
